fix: overlapping the header above all pages

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,9 +1,9 @@
 header {
   width: 100vw;
-  height: 50px;
+  height: 70px;
   background-color: black;
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 100;
 }
